z-index fix on staff page

--- a/site/.vuepress/theme/sass/modules/_aboutstaff.scss
+++ b/site/.vuepress/theme/sass/modules/_aboutstaff.scss
@@ -47,7 +47,7 @@
   #aboutstaff-s1-id-pic1 {
     margin-top: -240px;
     margin-left: 20px;
-    z-index: 100;
+
     @media (max-width: $screen-md-min) {
       display: none;
     }
